# actors

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html
doc/: search-index.js
doc/actors/: index.html  sidebar-items.js  stability.html  stability.json  trait.Actor.html  trait.ActorRef.html
doc/actors/channel/: index.html  sidebar-items.js  struct.ActorCell.html
doc/implementors/actors/: trait.Actor.js
doc/src/actors/: lib.rs.html
doc/src/actors/channel/: mod.rs.html
src/: lib.rs  tests.rs
src/channel/: mod.rs  tests.rs
src/js_pool/: mod.rs  tests.rs
src/thread/: mod.rs  tests.rs
