[package]
name = "actors"
version = "0.2.0"
authors = ["Peter Kolloch <kolloch@web-app-evolution.com>"]
description = "Provides actor-like concurrency for Rust"
documentation = "https://kolloch.github.io/actors/doc/actors/index.html"
homepage = "https://github.com/kolloch/actors"
repository = "https://github.com/kolloch/actors"
readme = "README.md"
keywords = ["actor", "concurrency", "threads", "synchronization"]
license = "BSD-3-Clause"
