[package]
name = "actors"
version = "0.2.0-SNAPSHOT"
authors = ["Peter Kolloch <kolloch@web-app-evolution.com>"]
description = "Provides actor-like concurrency for Rust"
documentation = "https://kolloch.github.io/actors/doc/actors/index.html"
homepage = "https://github.com/kolloch/actors"
repository = "https://github.com/kolloch/actors"
readme = "README.md"
keywords = ["actor", "concurrency", "threads", "synchronization"]
license = "BSD-3-Clause"

[dependencies]
jobsteal = {version = "0.2.4", optional = true}
log = "0.3"

[dev-dependencies]
env_logger = "0.3"

[features]
# Enable all features by default
default = ["channel", "thread", "jobsteal"]
# Allow spawning actors on a ForkJoinPool
channel = []
thread = []
